--- a/learn-spring-boot/src/main/resources/application.properties
+++ b/learn-spring-boot/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-logging.level.org.springframework=debug
+logging.level.org.springframework=trace
+# for production environment use -> spring.profiles.active=prod
+# for dev environment use -> spring.profiles.active=dev
+spring.profiles.active=dev
+
+currency-service.url=http://default.com
+currency-service.username=defaultUserName
+currency-service.key=defaultKey
+dev-db.db-name=spring-dev-db
+dev-db.db-username=psql
+
+app.port=8080
+
