--- a/learn-spring-boot/src/main/resources/application-dev.properties
+++ b/learn-spring-boot/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
 logging.level.org.springframework=trace
 
 app.port=8888
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
