finished spring jdbc, jpa. moving on to SpringDataJPA

--- a/learn-jpa-and-hibernate/src/main/resources/application.properties
+++ b/learn-jpa-and-hibernate/src/main/resources/application.properties
@@ -3,3 +3,8 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
+
+# this will show all the SQL queries that jpa runs
+spring.jpa.show-sql=true
+
+
