--- a/spring-webapp/src/main/resources/application.properties
+++ b/spring-webapp/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+#specifying a logging level for a specific package
+logging.level.com.shiva.webapp.springwebapp.login=debug
+# save the logs on this file -> will create file and folder if it doesn't exist. If exists, adds log to this file
+logging.file.name=logs/test.log
