--- a/employer-management-restAPI/src/main/resources/application.properties
+++ b/employer-management-restAPI/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-
+# switch off main banner
+spring.main.banner-mode=off
+#logging level
+logging.level.org.springframework=debug
+# automatic schema creation
+spring.jpa.hibernate.ddl-auto=create
+# set the database uri, username, password
+spring.jpa.database-platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+# use non-contextual LOB(Large Binary Objects) creation in a database
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Don't allow extra fields in request body
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
