fresh restapi project for student system

--- a/employer-management-restAPI/src/main/resources/application.properties
+++ b/employer-management-restAPI/src/main/resources/application.properties
@@ -5,12 +5,19 @@ logging.level.org.springframework=debug
 # automatic schema creation
 spring.jpa.hibernate.ddl-auto=create
 # set the database uri, username, password
-spring.jpa.database-platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_db
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.jpa.database-platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/employee_db
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # use non-contextual LOB(Large Binary Objects) creation in a database
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Don't allow extra fields in request body
-spring.jackson.deserialization.fail-on-unknown-properties=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jackson.deserialization.fail-on-unknown-properties=true
+# below settings are for H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+#spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
