react app for frontend

--- a/EmployeeManagementSystem/employer-management-restAPI/src/main/resources/application.properties
+++ b/EmployeeManagementSystem/employer-management-restAPI/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.banner-mode=off
 #logging level
 logging.level.org.springframework=debug
 #### H2 Database configuration
-spring.datasource.url=jdbc:h2:file:~/student_db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:file:~/employee_db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 #spring.datasource.password=password
