--- a/blog-rest-api2/pom.xml
+++ b/blog-rest-api2/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.blog</groupId>
-	<artifactId>blog-rest-api</artifactId>
+	<groupId>com.blog2</groupId>
+	<artifactId>blog-rest-api2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>blog-rest-api</name>
-	<description>Demo project for Spring Boot</description>
+	<name>blog-rest-api2</name>
+	<description>Redoing blog-api</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -23,18 +23,16 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -72,4 +70,3 @@
 	</build>
 
 </project>
-
