--- a/blog-rest-api/src/main/resources/application.properties
+++ b/blog-rest-api/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # logging level
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 spring.main.banner-mode=off
 
