--- a/blog-rest-api/pom.xml
+++ b/blog-rest-api/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
