--- a/learn-spring-security/src/main/resources/application.properties
+++ b/learn-spring-security/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.main.banner-mode=off
 
-spring.security.user.name=shiva
-spring.security.user.password=pass
+# logging level
+#logging.level.org.springframework=debug
+
+
+spring.datasource.url=jdbc:h2:file:~/test_db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_security;
+
+#spring.security.user.name=shiva
+#spring.security.user.password=pass
