--- a/SpringSecurityInAction/ssia-ch2-ex2/src/main/resources/application.properties
+++ b/SpringSecurityInAction/ssia-ch2-ex2/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.main.banner-mode=off
+
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:certificate.p12
+#server.ssl.key-store-password=2106
