--- a/SpringSecurityInAction/my-ssia-ch3-ex1/src/main/resources/application.properties
+++ b/SpringSecurityInAction/my-ssia-ch3-ex1/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.main.banner-mode=off
+
+
+# using PSQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+
+# using MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.username=root
+spring.datasource.password=pass@123
+spring.sql.init.mode=always
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
