--- a/SpringSecurityInAction/my-ssia-ch3-ex2/src/main/resources/application.properties
+++ b/SpringSecurityInAction/my-ssia-ch3-ex2/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.main.banner-mode=off
 
-
-# using MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
+# MySQL properties
+spring.datasource.url=jdbc:mysql://localhost:3306/my_spring
 spring.datasource.username=root
 spring.datasource.password=pass@123
 spring.sql.init.mode=always
