--- a/my-ss-ch3-ex1/src/main/resources/application.properties
+++ b/my-ss-ch3-ex1/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.main.banner-mode=off
 
-some.secret.key=delicious
+some.secret.key=simple
+
 
 ## MySQL config
 #spring.datasource.url=jdbc:mysql://localhost:3307/test_db
